# Hackoholics

./: package-lock.json  package.json
backend/: pyproject.toml
backend/src/: app.py  database.py  modelTemp.py
src/: App.js  page.js
src/components/: Body.js  Header.js  landingComponent.js  login.js
