[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "manishpravesh", email = "76170166+manishpravesh@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "qdrant-client (>=1.13.3,<2.0.0)",
    "langchain-groq (>=0.3.2,<0.4.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "motor (>=3.7.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)"
]

# 👇 Add this line to disable package mode
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
